[package]
name = "rusper"
version = "0.1.0"
authors = ["István Bozsó <bozso.istvan@csfk.mta.hu>"]
edition = "2018"

[features]
default = ["use_hecs"]

use_hecs = ["hecs"]

[lib]
name = "rusper"
path = "src/lib.rs"

[dependencies]
thiserror = "1.0"

# feature dependencies
hecs = { version = "0.3", optional = true }
